# audio-graph

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  biome.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: actionlint.yaml
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-05-30T22-17-24-205Z.yml
.seeds/: config.yaml  issues.jsonl
ci/storage-probe/: Cargo.toml
ci/storage-probe/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATAFLOW.md  DATA_FLOW.md  GEMINI_LANGUAGES.md  HANDOFF-2026-06-30.md  MODEL_MANAGEMENT_DESIGN.md  README.md  RELEASE.md  SETTINGS_DESIGN.md  WINDOWS_QUICKSTART.md  architecture-bkup.md  commit-state-2026-05-17.md  commit-state-2026-05-18-deepgram-turn-cross-platform.md  commit-state-2026-05-18.md  commit-state-2026-05-28-runnable-windows.md  commit-state-2026-06-23-provider-settings-roadmap.md  commit-state-2026-06-24-cicd-backlog-roadmap.md  commit-state-2026-06-25-deep-work-loop-checkpoint.md  commit-state-2026-06-26-backlog-zero-continuation.md  commit-state-2026-06-26-backlog-zero-resume.md  commit-state-2026-06-26-subagent-wave.md  commit-state-2026-06-27-backlog-zero-continuation.md  commit-state-2026-06-27-backlog-zero-wave-2.md  commit-state-2026-06-27-backlog-zero-wave-4.md  commit-state-2026-06-27-backlog-zero-wave-5.md  deep-work-log.md
docs/adr/: 0001-parallel-realtime-pipeline.md  0002-openai-realtime-provider.md  0003-speech-to-speech-agent-provider-matrix.md  0004-tts-provider-trait-and-deepgram-aura.md  0005-openrouter-as-recommended-llm-endpoint.md  0006-streaming-chat-and-native-s2s-separation.md  0007-feature-gate-local-ml.md  0008-conversation-ontology.md  0009-design-token-system-and-theming.md  0010-icon-system.md  0011-unified-feedback-system.md  0012-turn-gated-incremental-prefill-llama-cpp.md  0013-conversation-modes.md  0014-notes-synthesis.md  0015-modularize-css-defer-tailwind.md  0016-adopt-tailwind-v4-incremental.md  README.md  propmt.md  (+10 more)
scripts/: check-docs-secret-hygiene.mjs  download-models.ps1  download-models.sh  ensure-seeds-json-output.mjs  generate-audio-source-contract.mjs  generate-endpoint-credential-routing.mjs  generate-provider-registry.mjs  generate-session-data-movement.mjs  run-core-tests.ps1  run-rust-tests-wsl.sh  run-standalone.ps1  run-windows-debug.ps1  sd-issues.mjs  test-cloud-pipeline.ps1  test-rsac-windows.ps1
src/: App.css  App.test.tsx  App.tsx  credentialKeys.ts  credentialKeysDemoSuperset.test.ts  main.tsx  modelConstants.ts  rust-raw.d.ts  styles.css  theme.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/capabilities/: default.json
src-tauri/config/: default.toml
src-tauri/crates/ipc-contract/: Cargo.toml
src-tauri/crates/ipc-contract/src/: endpoint_credential_routing.rs  lib.rs  session_data_movement.rs
src-tauri/crates/provider-registry/: Cargo.toml
src-tauri/crates/provider-registry/src/: lib.rs
src-tauri/fixtures/aec_vad/: README.md  manifest.json
src-tauri/fixtures/asr/assemblyai/: server_events.json  v3_partial_final_revision.json  v3_speaker_revision_sideband.json
src-tauri/fixtures/asr/deepgram/: diarization_revisions.json  diarization_revisions_channel_suppressed.json  server_events.json
src-tauri/fixtures/asr/gladia/: partial_final_revision.json  sideband_and_error.json
src-tauri/fixtures/asr/openai_realtime/: server_events.json
src-tauri/fixtures/asr/revai/: partial_final_revision.json  sideband_and_error.json
src-tauri/fixtures/asr/soniox/: diarization_normalization.json  partial_final_revision.json  sideband_and_error.json
src-tauri/fixtures/asr/speechmatics/: partial_final_revision.json  sideband_and_error.json
src-tauri/fixtures/projection_eval/: two_span_repair.json
src-tauri/fixtures/promotion/: redaction_snapshots.json
src-tauri/fixtures/settings/: corrupt-config.yaml  current-config.yaml  duplicate-key-config.yaml  edge-compatible-config.yaml  legacy-settings.json  multi-document-config.yaml  tagged-config.yaml  unknown-fields-config.yaml  unknown-provider-config.yaml  yaml11-boolean-config.yaml
src-tauri/fixtures/source_separation/: README.md  manifest.json
src-tauri/src/: aec_vad_fixtures.rs  commands.rs  config.rs  error.rs  events.rs  lib.rs  ontology.rs  projection_data_movement.rs  projection_eval.rs  projection_llm.rs  projection_scheduler.rs  projections.rs  promotion.rs  provider_registry.rs  reconnect.rs  source_separation_fixtures.rs  speak_aloud.rs  state.rs  timeline.rs  tray.rs  user_data.rs  ws_request.rs
src-tauri/src/aec_vad/: mod.rs
src-tauri/src/analytics/: mod.rs
src-tauri/src/asr/: assemblyai.rs  aws_transcribe.rs  cloud.rs  deepgram.rs  event_fixtures.rs  fixtures.rs  gladia.rs  mod.rs  moonshine.rs  openai_realtime.rs  reconnect.rs  revai.rs  sherpa_streaming.rs  soniox.rs  speechmatics.rs  transport.rs  ws_fixture.rs
src-tauri/src/audio/: backpressure.rs  capture.rs  consumer.rs  live_audio_smoke.rs  mix_math.rs  mixer.rs  mod.rs  pcm.rs  pipeline.rs
src-tauri/src/aws_util/: mod.rs
src-tauri/src/converse/: mod.rs
src-tauri/src/crash_handler/: mod.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/diarization/: clustering.rs  mod.rs  stabilize.rs  worker.rs
src-tauri/src/fs_util/: mod.rs
src-tauri/src/gemini/: mod.rs
src-tauri/src/graph/: entities.rs  extraction.rs  temporal.rs
src-tauri/src/llm/: api_client.rs  bedrock.rs  engine.rs  executor.rs  http_diag.rs  mistralrs_engine.rs  mod.rs  openrouter.rs  sse.rs  stream_contract.rs  streaming.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/openai_realtime/: mod.rs
src-tauri/src/persistence/: data_movement.rs  io.rs  mod.rs  surreal.rs
src-tauri/src/playback/: mod.rs  tests.rs
src-tauri/src/sessions/: mod.rs  usage.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/speech/: context.rs  mod.rs  tests_audio_accumulator.rs  tests_integration.rs
src-tauri/src/tts/: deepgram_aura.rs  mod.rs
(+309 files in other folders)
