[package]
name = "audio-graph"
version = "0.1.0-rc.1"
description = "AudioGraph — Real-time audio capture to knowledge graph"
authors = ["rsac contributors"]
edition = "2024"

[[bin]]
name = "audio-graph"
path = "src/main.rs"
test = false
bench = false

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

# GPU acceleration features (opt-in).
# Default build is CPU-only. Enable one of these for GPU-accelerated
# Whisper ASR and llama.cpp LLM inference on Windows/Linux.
# macOS Metal acceleration is always enabled (see platform-specific deps below).
[features]
# Local ML inference (whisper.cpp ASR, llama.cpp + mistral.rs LLM) is ON by
# default so existing builds are unchanged. Build with
# `--no-default-features --features cloud` for a fast, light, cloud-only build
# (Deepgram/OpenRouter/etc.) that skips the heavy native ML compile — and whose
# test binary actually launches on Windows (the ML libs' native link otherwise
# aborts the test harness; see ADR-0007 / docs/reviews).
default = ["local-ml"]
local-ml = ["asr-whisper", "llm-llama", "llm-mistralrs"]
# Marker for the cloud-only build (no local ML). No deps of its own.
cloud = []
asr-whisper = ["dep:whisper-rs"]
llm-llama = ["dep:llama-cpp-2"]
llm-mistralrs = ["dep:mistralrs"]
cuda = [
    "whisper-rs?/cuda",
    "llama-cpp-2?/cuda",
] # NVIDIA GPUs (requires CUDA Toolkit); applies only when local ML is enabled
vulkan = [
    "whisper-rs?/vulkan",
    "llama-cpp-2?/vulkan",
] # Cross-vendor GPUs (requires Vulkan SDK); applies only when local ML is enabled
# Streaming speaker diarization (Sortformer ONNX via parakeet-rs).
diarization = ["dep:parakeet-rs"]
# Streaming ASR via sherpa-onnx (Zipformer transducer).
# Optional to avoid ONNX Runtime linker conflicts with parakeet-rs.
sherpa-streaming = ["dep:sherpa-onnx"]
# Unbounded speaker diarization via sherpa-onnx OfflineSpeakerDiarization
# (pyannote segmentation + 3D-Speaker embedding + FastClustering with an
# unknown speaker count). Uses sherpa-onnx's ONNX Runtime, so it is MUTUALLY
# EXCLUSIVE with the parakeet-rs `diarization` feature (ORT link conflict) but
# composes with `sherpa-streaming`. ADR-0017.
diarization-clustering = ["dep:sherpa-onnx"]

# Audio capture (rsac library), currently at v0.4.0 (tag a2d3088; CI pins this
# SHA via RSAC_REPO_SHA in .github/workflows/ci.yml).
# rsac is consumed as a PATH dep: it is checked out as a sibling of audio-graph
# (../../rsac, relative to this crate root) and built from source. v0.4.0 is NOT
# published to crates.io, so there is no version number to track here — the lock
# pins the path checkout. When/if a publish target is confirmed, each per-target
# block can flip to a crates.io dep (`rsac = "0.4"`) or a pinned git dep
# (`rsac = { git = "...", tag = "v0.4.0", features = [...] }`); until then the
# path dep is the source of truth. See README.md "Releasing" for the procedure.
[target.'cfg(target_os = "linux")'.dependencies]
rsac = { path = "../../rsac", features = ["feat_linux"] }

[target.'cfg(target_os = "windows")'.dependencies]
rsac = { path = "../../rsac", features = ["feat_windows"] }

[target.'cfg(target_os = "macos")'.dependencies]
rsac = { path = "../../rsac", features = ["feat_macos"] }
# Enable Metal GPU acceleration on macOS for Whisper ASR and llama.cpp LLM inference.
# Both crates detect Apple Metal via their build.rs, but the feature flag must be
# opted-in explicitly to link the Metal framework and compile the GPU kernels.
whisper-rs = { version = "0.16.0", optional = true, features = ["metal"] }
llama-cpp-2 = { version = "0.1.139", optional = true, features = ["metal"] }

[dependencies]
# Tauri framework
tauri = { version = "2.11.0", features = ["devtools"] }
# Single-instance guard (BUG-3): a 2nd launch focuses the running window instead
# of spawning a broken process that fails WebView2 creation (0x800700AA, shared
# user-data-dir lock). Desktop-only; must be the FIRST plugin registered.
tauri-plugin-single-instance = "2"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
# `CancellationToken` for streaming chat cancellation (plan A3 / ADR-0006).
# `rt` brings in `CancellationToken` (lives under `tokio_util::sync`).
tokio-util = { version = "0.7", features = ["rt"] }
# `Bytes` for streaming HTTP body chunks (already a transitive dep via
# reqwest; named explicitly so the streaming SSE consumer can name the type).
bytes = "1"

# Concurrency
crossbeam-channel = "0.5.15"
rayon = "1.10"

# Graph data structure
petgraph = "0.8.3"

# Logging
log = "0.4.29"
env_logger = "0.11.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Audio processing
rubato = "3.0"
audioadapter-buffers = "3.0"
# Cross-platform audio output (Wave B / audio-graph-8d75 / ADR-0004 consumer).
# cpal provides Stream + Device + Host abstractions; ringbuf gives us a
# lock-free SPSC ring buffer between the producer task (TtsEvent::AudioChunk
# consumer) and the realtime callback. cpal::Stream is !Send on Windows
# (WASAPI/COM); wrap it in a dedicated std::thread + crossbeam-channel
# command loop, never put the Stream in tauri::State directly.
cpal = "0.17"
ringbuf = "0.5"
thiserror = "2"
tar = "0.4"
bzip2 = "0.6"

# String similarity (entity resolution)
strsim = "0.11.1"

# Process enumeration (cross-platform)
sysinfo = "0.39"

# UUID generation
uuid = { version = "1.22.0", features = ["v4"] }

# Configuration defaults

# Speech recognition (needed by subtask 2). Optional: gated by `asr-whisper`
# (in the default `local-ml` feature). Cloud-only builds omit it.
whisper-rs = { version = "0.16.0", optional = true }

# Entity extraction (rule-based)
regex = "1"

# HTTP client for model downloads + cloud ASR API (multipart for audio upload).
# `stream` enables `Response::bytes_stream()` for SSE streaming chat (plan A3 /
# ADR-0006); `blocking` is still used by the legacy chat / extraction paths
# until those migrate to the async client.
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart", "stream"] }

# Native LLM inference (llama.cpp bindings). Optional: gated by `llm-llama`.
llama-cpp-2 = { version = "0.1.139", optional = true }
encoding_rs = "0.8"

# Rust-native LLM inference (mistral.rs on Candle)
# Metal GPU acceleration requires full Xcode (not just CLT) for the Metal shader
# compiler. Use default (CPU) features here; add platform-specific Metal feature
# in the [target.'cfg(target_os = "macos")'.dependencies] section when full Xcode
# is available. Set MISTRALRS_METAL_PRECOMPILE=0 to skip shader precompilation.
mistralrs = { version = "0.8", optional = true }

# JSON Schema derivation (used by mistral.rs structured generation)
# Must match the schemars version used by mistralrs (v1.x)
schemars = "1"

# Streaming speaker diarization (Sortformer ONNX via parakeet-rs)
parakeet-rs = { version = "0.3", features = [
    "sortformer",
], default-features = false, optional = true }

# Streaming ASR via sherpa-onnx (Zipformer transducer)
sherpa-onnx = { version = "1.13", optional = true }

# Gemini Live API (WebSocket)
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
base64 = "0.22"
futures-util = "0.3"
url = "2"

# TTS provider trait (object-safe async). Lightweight proc-macro crate; the
# only new dependency required by the `tts/` module landing in plan A1.
async-trait = "0.1"

# AWS SDK (always compiled — users switch providers in-app)
aws-config = { version = "1.1", features = ["behavior-version-latest", "sso"] }
aws-sdk-transcribestreaming = "1.102"
aws-credential-types = "1"
aws-sdk-sts = "1.101"
aws-smithy-http = "0.63"
tokio-stream = "0.1"

# Google Cloud auth (Vertex AI)
gcp_auth = "0.12"

# YAML config (settings stored in ~/.config/audio-graph/)
serde_yaml = "0.9"

# Platform directories (~/.config, etc.)
dirs = "6"

# Memory zeroization for credentials
zeroize = { version = "1.8", features = ["derive", "serde"] }

[dev-dependencies]
tauri = { version = "2.11.0", features = ["test"] }
