[package]
name = "audio-graph"
version = "0.1.0-rc.1"
description = "AudioGraph — Real-time audio capture to knowledge graph"
authors = ["rsac contributors"]
edition = "2024"

[workspace]
members = [".", "crates/ipc-contract", "crates/provider-registry"]
default-members = ["."]
resolver = "3"

[[bin]]
name = "audio-graph"
path = "src/main.rs"
test = false
bench = false

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

# GPU acceleration features (opt-in).
# Default build is CPU-only. Enable one of these for GPU-accelerated
# Whisper ASR and llama.cpp LLM inference on Windows/Linux.
# macOS Metal acceleration is always enabled (see platform-specific deps below).
[features]
# Local ML inference (whisper.cpp ASR, llama.cpp + mistral.rs LLM) is ON by
# default so existing builds are unchanged. Build with
# `--no-default-features --features cloud` for a fast, light, cloud-only build
# (Deepgram/OpenRouter/etc.) that skips the heavy native ML compile — and whose
# test binary actually launches on Windows (the ML libs' native link otherwise
# aborts the test harness; see ADR-0007 / docs/reviews).
default = ["local-ml"]
local-ml = ["asr-whisper", "llm-llama", "llm-mistralrs"]
# Marker for the cloud-only build (no local ML). No deps of its own.
cloud = []
asr-whisper = ["dep:whisper-rs"]
llm-llama = ["dep:llama-cpp-2"]
llm-mistralrs = ["dep:mistralrs"]
surrealdb-embedded = ["dep:surrealdb"]
cuda = [
    "whisper-rs?/cuda",
    "llama-cpp-2?/cuda",
] # NVIDIA GPUs (requires CUDA Toolkit); applies only when local ML is enabled
vulkan = [
    "whisper-rs?/vulkan",
    "llama-cpp-2?/vulkan",
] # Cross-vendor GPUs (requires Vulkan SDK); applies only when local ML is enabled
# Streaming speaker diarization (Sortformer ONNX via parakeet-rs).
diarization = ["dep:parakeet-rs"]
# Streaming ASR via sherpa-onnx (Zipformer transducer).
# Optional to avoid ONNX Runtime linker conflicts with parakeet-rs.
sherpa-streaming = ["dep:sherpa-onnx"]
# Moonshine Voice native C API streaming ASR. Off by default until the native
# library packaging and cross-platform smokes are proven.
asr-moonshine = []
# Live-audio e2e smoke (seed 0d66). Gates the real-device round-trip test that
# only runs on CI runners equipped with a virtual audio device + loopback
# (LABSN/sound-ci-helpers + per-OS shim). OFF by default and additive — no deps
# of its own — so normal/cloud builds never open an audio device. Enabled only
# by the `live-audio-smoke` CI job; the test it gates is `audio::live_audio_smoke`.
live-audio-smoke = []
# Unbounded speaker diarization via sherpa-onnx OfflineSpeakerDiarization
# (pyannote segmentation + 3D-Speaker embedding + FastClustering with an
# unknown speaker count). Uses sherpa-onnx's ONNX Runtime, so it is MUTUALLY
# EXCLUSIVE with the parakeet-rs `diarization` feature (ORT link conflict) but
# composes with `sherpa-streaming`. ADR-0017.
diarization-clustering = ["dep:sherpa-onnx"]

# Audio capture (rsac library), currently at v0.4.0 (tag a2d3088; CI pins this
# SHA via RSAC_REPO_SHA in .github/workflows/ci.yml).
# rsac is consumed as a PATH dep: it is checked out as a sibling of audio-graph
# (../../rsac, relative to this crate root) and built from source. v0.4.0 is NOT
# published to crates.io, so there is no version number to track here. Cargo.lock
# does NOT pin a path dep's contents (it records no source hash for path deps) —
# the actual pin is the rsac checkout itself, i.e. the CI-pinned SHA above
# (RSAC_REPO_SHA, tag a2d3088). When/if a publish target is confirmed, each per-target
# block can flip to a crates.io dep (`rsac = "0.4"`) or a pinned git dep
# (`rsac = { git = "...", tag = "v0.4.0", features = [...] }`); until then the
# path dep is the source of truth. See README.md "Releasing" for the procedure.
[target.'cfg(target_os = "linux")'.dependencies]
rsac = { path = "../../rsac", features = ["feat_linux"] }

[target.'cfg(target_os = "windows")'.dependencies]
rsac = { path = "../../rsac", features = ["feat_windows"] }
# SID-native owner-only ACL hardening (seed 403d). Direct dep so `fs_util` can
# resolve the current process token SID and call SetNamedSecurityInfoW without
# shelling out to `icacls`/`%USERNAME%`. Pinned to 0.62.2 — the exact version
# already resolved transitively (via rsac/cpal/sysinfo/wasapi), so no new/dup
# `windows` version enters the tree. Windows-target-only: never compiled on
# Linux/macOS. `cargo tree -p windows` confirms the single 0.62.2 node.
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
rsac = { path = "../../rsac", features = ["feat_macos"] }
# Enable Metal GPU acceleration on macOS for Whisper ASR and llama.cpp LLM inference.
# Both crates detect Apple Metal via their build.rs, but the feature flag must be
# opted-in explicitly to link the Metal framework and compile the GPU kernels.
whisper-rs = { version = "0.16.0", optional = true, features = ["metal"] }
llama-cpp-2 = { version = "0.1.139", optional = true, features = ["metal"] }

[dependencies]
audio-graph-provider-registry = { path = "crates/provider-registry" }
audio-graph-ipc-contract = { path = "crates/ipc-contract" }

# Tauri framework.
# NOTE: `devtools` is intentionally NOT in this feature list. Enabling it here
# would compile the WebView inspector into RELEASE bundles, exposing a renderer
# that aggregates live transcript text (privacy/security leak — see the Tauri v2
# audit, finding 5b). Tauri v2 already auto-enables devtools whenever
# `debug_assertions` is set: the inspector and `WebviewWindow::open_devtools`
# are gated on `#[cfg(any(debug_assertions, feature = "devtools"))]`, so `cargo
# build`/`tauri dev`/`tauri build --debug` keep the inspector for free while
# `--release` (debug_assertions off, feature absent) ships without it. The
# `devtools` Cargo feature exists ONLY to force the inspector into release
# builds, which is exactly what we must avoid here. Do not re-add it
# unconditionally; if a signed internal release ever needs the inspector, gate
# it behind a dedicated opt-in feature, never the default set.
# `tray-icon` enables the system tray recording indicator (audio-graph-a156):
# a built-in Tauri feature (no separate plugin) that pulls the `tray-icon` +
# `muda` crates. On Linux the optional `libxdo` menu-activation shim is left
# OFF (tauri's `linux-libxdo` feature is not enabled) so the cloud CI build has
# no new system-library requirement; the tray menu is still fully functional.
tauri = { version = "2.11.0", features = ["tray-icon"] }
# Single-instance guard (BUG-3): a 2nd launch focuses the running window instead
# of spawning a broken process that fails WebView2 creation (0x800700AA, shared
# user-data-dir lock). Desktop-only; must be the FIRST plugin registered.
tauri-plugin-single-instance = "2"
# Global start/stop capture shortcut (audio-graph-f67e): Cmd/Ctrl+Shift+R fires
# even when the window is unfocused. The plugin is desktop-only (no mobile
# backend) and AudioGraph only targets desktop (linux/windows/macos — see the
# per-target rsac blocks above), so it is a plain dep here; the registration in
# `lib.rs` is still gated behind `#[cfg(desktop)]` for defence in depth.
tauri-plugin-global-shortcut = "2"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
# `CancellationToken` for streaming chat cancellation (plan A3 / ADR-0006).
# `rt` brings in `CancellationToken` (lives under `tokio_util::sync`).
tokio-util = { version = "0.7", features = ["rt"] }
# `Bytes` for streaming HTTP body chunks (already a transitive dep via
# reqwest; named explicitly so the streaming SSE consumer can name the type).
bytes = "1"

# Concurrency
crossbeam-channel = "0.5.15"
rayon = "1.10"

# Graph data structure
petgraph = "0.8.3"

# Logging
log = "0.4.29"
env_logger = "0.11.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Audio processing
rubato = "3.0"
audioadapter-buffers = "3.0"
# Cross-platform audio output (Wave B / audio-graph-8d75 / ADR-0004 consumer).
# cpal provides Stream + Device + Host abstractions; ringbuf gives us a
# lock-free SPSC ring buffer between the producer task (TtsEvent::AudioChunk
# consumer) and the realtime callback. cpal::Stream is !Send on Windows
# (WASAPI/COM); wrap it in a dedicated std::thread + crossbeam-channel
# command loop, never put the Stream in tauri::State directly.
cpal = "0.17"
ringbuf = "0.5"
thiserror = "2"
tar = "0.4"
bzip2 = "0.6"

# String similarity (entity resolution)
strsim = "0.11.1"

# Process enumeration (cross-platform)
sysinfo = "0.39"

# UUID generation
uuid = { version = "1.22.0", features = ["v4"] }

# Non-secret credential fingerprinting (a stable, non-reversible sha256 prefix
# used ONLY to compare "is the key that reached the wire the same one that was
# just saved?" in logs — never the key itself). Both crates are already in the
# tree transitively (via the always-on aws-* / sentry deps); naming them here
# lets us call them directly without pulling in anything new.
sha2 = "0.10"
hex = "0.4"

# Configuration defaults

# Speech recognition (needed by subtask 2). Optional: gated by `asr-whisper`
# (in the default `local-ml` feature). Cloud-only builds omit it.
whisper-rs = { version = "0.16.0", optional = true }

# Entity extraction (rule-based)
regex = "1"

# HTTP client for model downloads + cloud ASR API (multipart for audio upload).
# `stream` enables `Response::bytes_stream()` for SSE streaming chat (plan A3 /
# ADR-0006); `blocking` is still used by the legacy chat / extraction paths
# until those migrate to the async client.
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart", "stream"] }

# Native LLM inference (llama.cpp bindings). Optional: gated by `llm-llama`.
llama-cpp-2 = { version = "0.1.139", optional = true }
encoding_rs = "0.8"

# Rust-native LLM inference (mistral.rs on Candle)
# Metal GPU acceleration requires full Xcode (not just CLT) for the Metal shader
# compiler. Use default (CPU) features here; add platform-specific Metal feature
# in the [target.'cfg(target_os = "macos")'.dependencies] section when full Xcode
# is available. Set MISTRALRS_METAL_PRECOMPILE=0 to skip shader precompilation.
mistralrs = { version = "0.8", optional = true }

# JSON Schema derivation (used by mistral.rs structured generation)
# Must match the schemars version used by mistralrs (v1.x)
schemars = "1"

# Streaming speaker diarization (Sortformer ONNX via parakeet-rs)
parakeet-rs = { version = "0.3", features = [
    "sortformer",
], default-features = false, optional = true }

# Streaming ASR via sherpa-onnx (Zipformer transducer)
sherpa-onnx = { version = "1.13", optional = true }

# Gemini Live API (WebSocket)
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
base64 = "0.22"
futures-util = "0.3"
url = "2"

# Transitive `time` floor pin (ac5d — build reproducibility).
# `cookie 0.18.1` (pulled in transitively via reqwest/tower-cookies/tauri) calls
# the OLD two-argument `time::Format::parse(&self, &[u8])`. `time 0.3.48` changed
# that primitive to a three-argument `parse(&self, &[u8], Option<Parsed>)`, so
# `cookie 0.18.1` fails to compile (E0061) against `time >= 0.3.48`. `cookie`
# only requires `time = "0.3"`, so on a clean checkout (no Cargo.lock) the
# resolver happily picks the newest 0.3.x (e.g. 0.3.52) and the build breaks.
# Cap `time` below the breaking 0.3.48 release so the dependency graph resolves
# deterministically WITHOUT relying on a gitignored lockfile. Drop this pin once
# `cookie` ships a release built against the new `time` parse signature.
time = ">=0.3.23, <0.3.48"

# TTS provider trait (object-safe async). Lightweight proc-macro crate; the
# only new dependency required by the `tts/` module landing in plan A1.
async-trait = "0.1"

# AWS SDK (always compiled — users switch providers in-app)
aws-config = { version = "1.1", features = ["behavior-version-latest", "sso"] }
aws-sdk-transcribestreaming = "1.102"
aws-sdk-bedrockruntime = "1.102"
aws-credential-types = "1"
aws-sdk-sts = "1.101"
# NOTE: no direct aws-smithy-http dep. EventStreamSender is imported via the
# SDK's re-export (aws_sdk_transcribestreaming::primitives::event_stream),
# which guarantees the same crate instance + `event-stream` feature the SDK
# compiled against. A direct dep here can resolve to a DIFFERENT 0.x line
# than the SDK's (0.x minors are semver-incompatible), splitting the graph
# into two aws_smithy_http instances — that broke every cargo CI job on
# PR #97 (runs 28972645682 / 28973622208). Don't re-add it.
tokio-stream = "0.1"

# Google Cloud auth (Vertex AI)
gcp_auth = "0.12"

# YAML config (settings stored in ~/.config/audio-graph/)
serde_yaml = "0.9"

# OS-native credential storage for production desktop builds. The backend
# falls back to the YAML credential adapter in tests/headless override modes.
keyring = "4.1.1"

# Optional embedded local memory adapter. The default file repository remains
# the product store until file-backed engines have cross-platform release proof.
surrealdb = { version = "3.1.4", default-features = false, features = ["kv-mem"], optional = true }

# Platform directories (~/.config, etc.)
dirs = "6"

# Memory zeroization for credentials
zeroize = { version = "1.8", features = ["derive", "serde"] }

# Anonymous, opt-in error/diagnostics analytics (Sentry Rust SDK).
# Compiled UNCONDITIONALLY (not feature-gated): analytics is a runtime toggle,
# not a compile-time feature, and the pure-Rust Sentry SDK has no native-ML
# linker conflict — so it builds identically in the default `local-ml` profile
# and the `--no-default-features --features cloud` profile. `default-features =
# false` drops the default `transport` (native-tls) in favour of an explicit
# `reqwest` + `rustls` transport that matches our existing reqwest/rustls stack.
sentry = { version = "0.48.3", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
] }

[dev-dependencies]
tauri = { version = "2.11.0", features = ["test"] }
serde-saphyr = "0.0.28"
