[package]
name = "audio-graph-provider-registry"
version = "0.1.0-rc.1"
edition = "2024"
description = "Lightweight AudioGraph provider capability registry and TypeScript exporter"
publish = false

[[bin]]
name = "export-provider-registry"
path = "src/bin/export_provider_registry.rs"
test = false
bench = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
